Uses flexbox to align content and fixes ga in pages

--- a/css/main.css
+++ b/css/main.css
@@ -35,16 +35,13 @@
   font-style: normal;
 }
 
+
 /* STYLING */
+
 body {
   font-family: 'montserrathairline', sans-serif;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
+  display: flex;
+  flex-flow: column wrap;
 
   -webkit-transition: background-color 250ms linear 250ms, color 250ms linear 250ms;
   -moz-transition: background-color 250ms linear 250ms, color 250ms linear 250ms;
@@ -66,18 +63,12 @@ body:hover a {
 }
 
 h1 {
-  font-family: 'bebas_neuebold', sans-serif;
-  font-size: 13em;
+  font-family: "bebas_neuebold", "sans-serif";
+  font-size: 12em;
 }
 
 h2 {
   letter-spacing: -1px;
-  float: right;
-  margin: 0 30px;
-}
-
-p {
-  margin: 0 90px;
 }
 
 ul {
@@ -92,23 +83,27 @@ a {
   text-decoration: none;
 }
 
-.about {
-  font-size: 126%;
+p {
+  font-size: 1.2em;
+}
+
+.align-end, p {
+  align-self: flex-end;
+  margin-right: 20px;
+}
+
+.question-mark {
+  font-family: "bebas_neuebold", "sans-serif";
+  font-size: 2.5em;
+}
+
+.outer {
+  position: absolute;
   height: 100%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-#question-mark {
-  font-family: "bebas_neuebold", "sans-serif";
-  font-size: 200%;
-  padding: 20px;
-  float: right;
-}
-
-#email {
-  text-decoration: underline;
 }
 
 /* ICONS */
